<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_toolbar"
    android:layout_width="match_parent"
    android:background="@color/bg_toolbar"
    android:layout_height="?attr/actionBarSize">

    <com.travel.app.common.view.icon.TextViewAwsSo
        android:id="@+id/twa_btn_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/ico_arrow_left"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_page"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name_page" />

    <TextView
        android:id="@+id/tv_name_page"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.travel.app.common.view.icon.TextViewAwsSo
        android:id="@+id/twa_menumore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/ico_ellipsis_v"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_page"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name_page" />
</androidx.constraintlayout.widget.ConstraintLayout>
