<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@drawable/bg_shadow"
    android:paddingBottom="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:includeFontPadding="false"
        android:text="Bai Dinh Hotel"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/color_orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <com.travel.app.common.view.icon.TextViewAwsSo
        android:id="@+id/textViewAwsSo9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ico_marker"
        android:textColor="@color/color_yellow"
        android:textSize="@dimen/ico_small"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="Bai Dinh Pagoda Area, Gia Sinh Village, Gia Sinh, Gia Viễn, Ninh Bình"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAwsSo9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_phone"
        app:layout_constraintTop_toTopOf="@+id/textViewAwsSo9"
        app:layout_constraintVertical_bias="0.0" />

    <com.travel.app.common.view.icon.TextViewAwsSo
        android:id="@+id/textViewAwsSo10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ico_phone"
        android:textColor="@color/color_yellow"
        android:textSize="@dimen/ico_small"
        app:layout_constraintEnd_toEndOf="@+id/textViewAwsSo9"
        app:layout_constraintStart_toStartOf="@+id/textViewAwsSo9"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="02293868789"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAwsSo10"
        app:layout_constraintStart_toStartOf="@+id/tv_work"
        app:layout_constraintTop_toTopOf="@+id/textViewAwsSo10"
        app:layout_constraintVertical_bias="0.0" />

    <com.travel.app.common.view.icon.TextViewAwsSo
        android:id="@+id/textViewAwsSo11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ico_business_time"
        android:textColor="@color/color_yellow"
        android:textSize="@dimen/ico_small"
        app:layout_constraintEnd_toEndOf="@+id/textViewAwsSo10"
        app:layout_constraintStart_toStartOf="@+id/textViewAwsSo10"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <TextView
        android:id="@+id/tv_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="7h00 - 23h00"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAwsSo11"
        app:layout_constraintStart_toEndOf="@+id/textViewAwsSo11"
        app:layout_constraintTop_toTopOf="@+id/textViewAwsSo11" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="3.5km"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.travel.app.common.view.icon.TextViewAwsSo
        android:id="@+id/textViewAwsSo12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/ico_road"
        android:textColor="@color/color_green"
        android:textSize="@dimen/ico_small"
        app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
        app:layout_constraintEnd_toStartOf="@+id/tv_distance"
        app:layout_constraintTop_toTopOf="@+id/tv_distance" />

</androidx.constraintlayout.widget.ConstraintLayout>